<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/CustomRelativeLayout">

	<ImageView
		android:id="@+id/logo"
		style="@style/CustomLogoImageView"
		android:contentDescription="@string/app_name"/>

	<TextView
		android:id="@+id/profile"
		style="@style/CustomStatusTextView"
		android:layout_below="@id/logo"
		android:text="@string/app_name"/>

	<LinearLayout
		android:id="@+id/email_password_fields"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:orientation="horizontal">

		<EditText
			android:id="@+id/field_email"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_email"
			android:inputType="textEmailAddress"/>

		<EditText
			android:id="@+id/field_password"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/hint_password"
			android:inputType="textPassword"/>

	</LinearLayout>

	<LinearLayout
		android:id="@+id/email_password_buttons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/email_password_fields"
		android:orientation="horizontal">

		<Button
			android:id="@+id/email_sign_in_button"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/sign_in"
			android:theme="@style/ThemeOverlay.MyDarkButton"/>

		<Button
			android:id="@+id/email_create_account_button"
			style="?android:attr/button"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@string/create_account"
			android:theme="@style/ThemeOverlay.MyDarkButton"/>

	</LinearLayout>

	<Button
		android:id="@+id/sign_out_button"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/profile"
		android:text="@string/sign_out"
		android:theme="@style/ThemeOverlay.MyDarkButton"
		android:visibility="gone"/>

</RelativeLayout>