<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	style="@style/CustomRelativeLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools">

	<ImageView
		android:id="@+id/logo"
		style="@style/CustomLogoImageView"
		android:contentDescription="@string/app_name"/>

	<TextView
		android:id="@+id/profile"
		style="@style/CustomStatusTextView"
		android:layout_below="@id/logo"
		tools:text="@string/app_name"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true">

		<LinearLayout
			android:id="@+id/phone_auth_fields"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="2">

				<EditText
					android:id="@+id/field_phone_number"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/hint_phone_number"
					android:inputType="phone"/>

				<EditText
					android:id="@+id/field_verification_code"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:hint="@string/hint_verification_code"
					android:inputType="number"/>

			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:weightSum="3">

				<Button
					android:id="@+id/button_start_verification"
					style="?android:attr/button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/start_phone_auth"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>

				<Button
					android:id="@+id/button_verify_phone"
					style="?android:attr/button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/verify_phone_auth"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>

				<Button
					android:id="@+id/button_resend"
					style="?android:attr/button"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:text="@string/resend_phone_auth"
					android:theme="@style/ThemeOverlay.MyDarkButton"/>
			</LinearLayout>

		</LinearLayout>

		<Button
			android:id="@+id/sign_out_button"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:text="@string/sign_out"
			android:theme="@style/ThemeOverlay.MyDarkButton"
			android:visibility="gone"/>

	</RelativeLayout>

</RelativeLayout>